--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             
         </div>
         <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
-        <script src='./mainJS.js' type='text/babel'></script>
+        <script src='./graph.js' type='text/babel'></script>
     </body>
 </html>
