--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            #legend {
+                background-color: green;
+            }
+        </style>
         <meta charset='UTF-8'>
         <title>Scatterplot Graph</title>
         <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
@@ -18,6 +23,7 @@
         <div id='header'>
             <h1 id='title'>Scatterplot Graph</h1>
         </div>
+        <div id='legend'></div>
         <div id='graph-div'>
             
         </div>
