Scattergraph passes all tests. Still needs styling, looks basic

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <style>
-            #legend {
-                background-color: green;
+
+            #tooltip {
+                width: 300px;
+                height: 100px;
+                background-color: white;
+                border: 1px solid #ABCDEF;
+                border-radius: 5%;
+                position: absolute;
+                opacity: 0;
             }
         </style>
         <meta charset='UTF-8'>
