Added styling to tooltip

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
 
             #tooltip {
                 width: 300px;
-                height: 100px;
+                height: 110px;
                 background-color: white;
                 border: 1px solid #ABCDEF;
                 border-radius: 5%;
                 position: absolute;
                 opacity: 0;
             }
+
+            .smallfont {
+                font-size: 10px;
+            }
+
         </style>
         <meta charset='UTF-8'>
         <title>Scatterplot Graph</title>
