Finished Project - fixed tooltip

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         </style>
         <meta charset='UTF-8'>
-        <title>Scatterplot Graph</title>
+        <title>Doping by Professional Cyclists</title>
         <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -33,7 +33,7 @@
     
     <body>
         <div id='header'>
-            <h1 id='title'>Scatterplot Graph</h1>
+            <h1 id='title'>Doping by Professional Cyclists</h1>
         </div>
         <div id='legend'></div>
         <div id='graph-div'>
